# nexus-cli-linux

./: Cargo.toml  README.md
src/: Cargo.toml  README.md  analytics.rs  config.rs  consts.rs  environment.rs  error_classifier.rs  events.rs  key_manager.rs  main.rs  node_list.rs  orchestrator_client_enhanced.rs  prover.rs  prover_runtime.rs  register.rs  setup.rs  system.rs  task.rs  task_cache.rs
src/orchestrator/: client.rs  error.rs  mod.rs
src/remote/: client.rs  mod.rs  server.rs  types.rs
src/src/: main.rs  node_list.rs  prover_runtime.rs
src/ui/: dashboard.rs  mod.rs
src/utils/: banner.rs  mod.rs  system.rs
src/workers/: offline.rs  online.rs
