[package]
name = "nexus-network"
version = "0.8.17"
edition = "2024"
rust-version = "1.85"
build = "build.rs"

[features]
# 默认启用 jemalloc 内存优化
default = ["jemalloc"]
build_proto = []
# 添加 jemalloc feature 用于内存碎片处理优化
jemalloc = ["jemallocator"]

[[bin]]
name = "nexus"
path = "src/main.rs"

[profile.dev]
opt-level = 1

[profile.release]
lto = "fat"
strip = true
codegen-units = 1
# 内存优化配置
panic = "abort"           # 减少二进制大小和内存使用
overflow-checks = false   # 减少运行时检查

[profile.ci-build]
inherits = "dev"
opt-level = 0
debug = 0
strip = "none"
lto = false
codegen-units = 256
incremental = true

[dependencies]
async-trait = "0.1.88"
cfg-if = "1.0"
chrono = "0.4.38"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1.0"
crossbeam = "0.8.4"
crossterm = "0.29.0"
ed25519-dalek = { version = "2", features = ["rand_core"] }
home = "0.5.9"
iana-time-zone = "0.1.60"
log = "0.4.26"
nexus-sdk = { git = "https://github.com/nexus-xyz/nexus-zkvm", tag = "0.3.4" }
postcard = "1.0.10"
prost = "0.13"
prost-types = "0.13.5"
rand = "0.8"
rand_core = "0.6"
rayon = "1.10.0"
ratatui = "0.29.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138" }
sha3 = "0.10.8"
strum = "0.26.3"
sysinfo = "0.33.1"
thiserror = "2.0.12"
# 优化tokio配置，减少内存使用
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "sync", "time", "signal"], default-features = false }
urlencoding = "2.1.3"
uuid = "1.16.0"
# 添加内存优化相关依赖
jemallocator = { version = "0.5", optional = true }
lazy_static = "1.4.0"     # 用于全局证明器实例
once_cell = "1.19.0"      # 用于单例优化
parking_lot = "0.12"      # 用于高效锁
md5 = "0.7.0"             # 用于客户端ID生成
env_logger = "0.11.2"     # 用于日志初始化

[dev-dependencies]
assert_cmd = "2"
async-trait = "0.1.88"
mockall = "0.12"
predicates = "3"
tempfile = "3.20.0"

[build-dependencies]
prost-build = "0.13"
